--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,8 @@
     <table class="table" id="table1">
 
     </table>
+    <br/><br/>
+    <button type="button" id="report" class="btn btn-success">ФИО всех студентов</button>
 </div>
 </body>
 
