create avg rating

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,9 @@
     </table>
     <br/><br/>
     <button type="button" id="report" class="btn btn-success">ФИО всех студентов</button>
+    <table class="table" id="table2">
+
+    </table>
 </div>
 </body>
 
