--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
     <script src="./js/jquery-3.3.1.js"></script>
-    <script src="./js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <script src="./js/index.js"></script>
 </head>
 <body>
@@ -18,6 +21,10 @@
     <button type="button" id="report" class="btn btn-success">ФИО всех студентов</button>
     <table class="table" id="table2">
 
+    </table>
+    <br/><br/>
+    <button type="button" id="rating" class="btn btn-secondary">Рейтинг студентов</button>
+    <table class="table" id="table3">
     </table>
 </div>
 </body>
