complete all request

--- a/html/index.html
+++ b/html/index.html
@@ -13,19 +13,26 @@
 </head>
 <body>
 <div class="container col-4 offset-4 text-center justify-content-center">
-    <button type="button" id="view_table" class="btn btn-primary">Вывести таблицу</button>
+    <button type="button" id="rating" class="btn btn-secondary">Рейтинг студентов</button>
+    <table class="table" id="table3">
+    </table>
+    <br/><br/>
+    <button type="button" id="view_table" class="btn btn-primary">Отображение таблицы</button>
     <table class="table" id="table1">
 
     </table>
     <br/><br/>
-    <button type="button" id="report" class="btn btn-success">ФИО всех студентов</button>
+    <button type="button" id="view_unique" class="btn btn-danger">Уникальные ФИО студентов</button>
+    <table class="table" id="table4">
+    </table>
+    <br/><br/>
+    <button type="button" id="report" class="btn btn-success"> Средний рейтинг по факультету</button>
     <table class="table" id="table2">
 
     </table>
-    <br/><br/>
-    <button type="button" id="rating" class="btn btn-secondary">Рейтинг студентов</button>
-    <table class="table" id="table3">
-    </table>
+
+
+
 </div>
 </body>
 
