complete all task, stayed small bag 'delete select tab'

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,12 @@
 </head>
 <body>
 <div class="container col-4 offset-4 text-center justify-content-center">
+    <div class="select_option_branch">
+        <select class="custom-select" id="branch">
+            <option selected>-</option>
+        </select>
+    </div>
+    <br/><br/>
     <div class="select_option">
         <select class="custom-select" id="faculty">
             <option selected>-</option>
